try to fix project spacing

--- a/style.css
+++ b/style.css
@@ -397,8 +397,9 @@ a:hover {
   text-align: center;
 }
 
-#project-body {
+#project-main-body {
   width: 100vw;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
